--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -1,56 +1,51 @@
-@article{perkins:1991,
-  title={Effects of nicotine on perceived exertion during low-intensity activity.},
-  author={Perkins, Kenneth A and Sexton, Joan E and Solberg-Kassel, Rena D and Epstein, Leonard H},
-  journal={Medicine \& Science in Sports \& Exercise},
-  year={1991},
-  publisher={Lippincott Williams \& Wilkins}
+@article{paul2019effects,
+  title={Effects of education and poverty on the prevalence of girl child marriage in India: A district--level analysis},
+  author={Paul, Pintu},
+  journal={Children and Youth Services Review},
+  volume={100},
+  pages={16--21},
+  year={2019},
+  publisher={Elsevier}
 }
 
-@book{newbold:2003,
-	Author = {Newbold, Paul and Carlson, William Lee and Thorne, Betty},
-	Booktitle = {Statistics for Business and Economics},
-	Publisher = {Pearson College Division},
-	Title = {Statistics for Business and Economics},
-	Year = {2003}}
+article{cantekin2019child,
+  title={Child marriage and its consequences},
+  author={CANTEK{\.I}N, {\"O}mer Faruk},
+  journal={Recent studies in health sciences},
+  pages={683},
+  year={2019}
+}
 
-@book{verzani:2014,
-	author = {Verzani, John},
-	publisher = {CRC Press},
-	title = {Using {R} for Introductory Statistics},
-	year = {2014}}
+@article{malatyali2014turkiye,
+  title={T{\"u}rkiye’de ‘{\c{C}}ocuk Gelin’Sorunu},
+  author={Malatyali, Meryem Kaynak and others},
+  journal={Nesne-Psikoloji Dergisi},
+  volume={2},
+  number={03},
+  pages={27--38},
+  year={2014},
+  publisher={Sanat ve Dil Ara{\c{s}}t{\i}rmalar{\i} Enstit{\"u}s{\"u}}
+}
 
-
-@book{wickham:2014,
-	author = {Wickham, Hadley},
-	month = {Sep},
-	publisher = {CRC Press},
-	title = {Advanced {R}},
-	year = {2014}}
-
-
-@article{aydinonat:2007,
-	Author = {Aydınonat, N. Emrah},
-	Title = {İktisat Öğrencileri için Ödev Yazma Kılavuzu},
-	url = {http://iktisat.cu.edu.tr/tr/Belgeler/Formlar/Bitirme%20Projesi%20Ödev%20Hazırlama%20Rehberi/N.%20Emrah%20AYDINONAT%20(2006)%20Ödev%20Rehberi.pdf},
-	Year = {2007}}
-
-
-@article{wooldridge:2015a,
-	author = {Wooldridge, Jeffrey M.},
-	journal = {Journal of Human Resources},
-	number = {2},
-	pages = {420--445},
-	title = {Control Function Methods in Applied Econometrics},
-	volume = {50},
-	year = 2015}
+@article{kiran2017toplumsal,
+  title={TOPLUMSAL C{\.I}NS{\.I}YET ROLLER{\.I} BA{\u{G}}LAMINDA T{\"U}RK{\.I}YE’DE {\c{C}}OCUK GEL{\.I}NLER},
+  author={KIRAN, Elif},
+  journal={Balkan Sosyal Bilimler Dergisi},
+  number={ICOMEP 2017 {\"O}ZEL SAYISI},
+  pages={1--8},
+  year={2017}
+}
 
 
-@article{chang:2013,
-	author = {Chang, Dongfeng and Serletis, Apostolos},
-	journal = {Journal of Applied Econometrics},
-	month = {jan},
-	number = {2},
-	pages = {291--313},
-	title = {The Demand for Gasoline: Evidence from Household Survey Data},
-	volume = {29},
-	year = 2013}
+@article{duman2019ccocuk,
+  title={“{\c{C}}ocuk Ya{\c{s}}ta Evlilik” ya da “{\c{C}}ocuk Gelin” Olgusuna Psikososyal Bir Bak{\i}{\c{s}}},
+  author={Duman, Nesrin and Co{\c{s}}kun, B{\"u}{\c{s}}ra Nur},
+  journal={Uluslararas{\i} Bilimsel Ara{\c{s}}t{\i}rmalar Dergisi (IBAD)},
+  volume={4},
+  number={2},
+  pages={267--276},
+  year={2019}
+}
+
+
+
