change in introduction

--- a/final/final.Rmd
+++ b/final/final.Rmd
@@ -47,7 +47,7 @@ knitr::opts_chunk$set(cache = FALSE, echo = TRUE, message = FALSE, warning = FAL
 \colorbox{WildStrawberry}{Read the README.md file in the project folder for more information.}
 
 # Introduction
-Child marriage, also known as adolescent marriage, early marriage, forced marriage, and child brides, generally refers to the practice of children, particularly girls, under the age of 18 getting married. It is a pervasive issue that transcends cultural boundaries and is not confined to any specific culture or region. Children under the age of 18 who are married are considered a vulnerable group worldwide (Paul, 2019). Consequently, this subject necessitates academic scrutiny and comprehensive analysis.
+Child marriage, also known as adolescent marriage, early marriage, forced marriage, and child brides, generally refers to the practice of children, particularly girls, under the age of 18 getting married. It is a pervasive issue that transcends cultural boundaries and is not confined to any specific culture or region. Children under the age of 18 who are married are considered a vulnerable group worldwide [@paul2019effects]. Consequently, this subject necessitates academic scrutiny and comprehensive analysis.
 
 Child marriage in Turkey is an under-researched topic that requires further investigation and analysis. There is a need for comprehensive studies examining the current situation of child marriage from medical, social, economic, and legal perspectives. Such research is crucial for gaining a deeper understanding of the issue and developing effective strategies to address child marriage in Turkey. By exploring the various dimensions of child marriage, policymakers, organizations, and communities can make informed decisions and take appropriate actions to protect children's rights and promote gender equality.
 
