--- a/final/final.Rmd
+++ b/final/final.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "CHILD MARRIAGE IN TURKEY"
+title: "Importance Of Gender Roles and Child Marriage In Turkey"
 author: 
   - Kul, Sılanur Ayşen[^1]
 bibliography: ../bibliography/biblio.bib
@@ -42,7 +42,7 @@ Child marriage, also known as adolescent marriage, early marriage, forced marria
 
 Child marriage in Turkey is an under-researched topic that requires further investigation and analysis. There is a need for comprehensive studies examining the current situation of child marriage from medical, social, economic, and legal perspectives. Such research is crucial for gaining a deeper understanding of the issue and developing effective strategies to address child marriage in Turkey. By exploring the various dimensions of child marriage, policymakers, organizations, and communities can make informed decisions and take appropriate actions to protect children's rights and promote gender equality.
 
-The distribution of child marriages in Turkey reveals a declining trend in their numbers over the years, alongside regional variations in the average age at marriage. Based on data published by TURKSTAT in 2022, girl child marriages have decreased according to official statistics. The percentage of child brides in the 16-17 age group decreased from 5.2% in 2015 to 4.6% in 2016. When examining the provincial data, Ağrı province has the highest rate of marriages involving girls under 18, with a rate of 15.7%. Conversely, Tunceli province has the lowest rate at 1.1%. These findings highlight the need for targeted efforts to address child marriages and implement measures that protect the rights of underage girls across different regions in Turkey [@kiran2017toplumsal]
+The distribution of child marriages in Turkey reveals a declining trend in their numbers over the years, alongside regional variations in the average age at marriage. Based on data published by TUIK in 2022, girl child marriages have decreased according to official statistics. The percentage of child brides in the 16-17 age group decreased from 5.2% in 2015 to 4.6% in 2016. When examining the provincial data, Ağrı province has the highest rate of marriages involving girls under 18, with a rate of 15.7%. Conversely, Tunceli province has the lowest rate at 1.1%. These findings highlight the need for targeted efforts to address child marriages and implement measures that protect the rights of underage girls across different regions in Turkey [@kiran2017toplumsal]
 
 
 ## Literature Review
